[package]
name = "pulse-trader"
version = "0.1.0-alpha.0"
edition = "2024"

[dependencies]
pulse-ui = { workspace = true }
pulse-wire = { workspace = true }

chrono = "0.4.45"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
crossterm = { workspace = true }

[workspace]
members = ["pulse-macros", "pulse-ui", "pulse-wire"]

[workspace.dependencies]
pulse-macros = { path = "pulse-macros", version = "0.1.0-alpha.0" }
pulse-ui = { path = "pulse-ui", version = "0.1.0-alpha.0" }
pulse-wire = { path = "pulse-wire", version = "0.1.0-alpha.0" }

tokio = "1.52.3"
crossterm = "0.29.0"

[[bin]]
name = "pulse-trader"
path = "src/terminal/main.rs"

[[bin]]
name = "pulse-trader-engine"
path = "src/engine/main.rs"
